another style polish and fix for the movie card white bottom that was offsetting on smaller screens

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,10 @@ body {
       }
     }
 
+    #search-section {
+      margin-top: 100px;
+    }
+
     #statistics-section {
       margin-top: 100px;
     }
